tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use3.ic
class A
{
	int a()
	{
		int b;
		return b;
	}

	static void main(string[] args) { }
}
